--- a/index.html
+++ b/index.html
@@ -15,26 +15,86 @@
 <body>
     <header>
         <img class="logo" src="images/fond_noir.svg" alt="logo_casamento_illionnet_gaetan_webdeveloper" />
-    </header>
 
-    <div class="titre">
-        <h2>portfolio</h2>
-        <h1>developpeur web front end</h1>
-    </div>
-
-    <div class="navigation">
-        <nav>
+        <nav class="navigation">
             <ul>
-                <li><a class="presentation" href="presentation.html">presentation</a></li>
-                <li><a class="competences" href="competences.html">competences</a></li>
-                <li><a class="projets" href="projets.html">projets</a></li>
-                <li><a class="projets" href="club-page/index.html">the old gamers crew</a></li>
-                <li><a class="a_propos" href="a_propos.html">a propos</a></li>
-                <li><a class="contact" href="contact.html">contact</a></li>
+                <li><a href="#about">Chocolate-in Agency?</a></li>
+                <li><a href="#project">Projets</a></li>
+                <li><a href="#skill">Compétences</a></li>
+                <li><a href="#coontact">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
+    <main>
+        <section id="hero">
+            <div class="titre">
+                <h1>Chocolate-in Agency <br> Agence fictive de création amusante</h1>
+            </div>
+            <nav class="navigation-hero">
+                <ul>
+                    <li><a href="#about">Chocolate-in Agency?</a></li>
+                    <li><a href="#project">Projets</a></li>
+                    <li><a href="#skill">Compétences</a></li>
+                    <li><a href="#coontact">Contact</a></li>
+                </ul>
+            </nav>
+        </section>
+        <section id="about">
+            <h2>Chocolate-in agency ? Mais qui se cache derrière ?</h2>
+            <article>
+                <img src="" alt="Image de présentation de Gaëtan Casmento-Illionnet">
+                <article>
+                    <p>
+                        Un développeur front-end à aspiration full-stack qui s'appelle Gaëtan Casamento-Illionnet. <br>
+                        Originaire de Bordeaux, je vis à Londres depuis 2019. Après 8 ans années dans le secteur de l’aéronautique, je change de vois et pars tenter l’aventure dans le web. D’abord une formation de chef de projet digital passé à digital campus bordeaux en 2019 je décide de me spécialise dans le développement web en suivant des formations en lignes sur Openclassrom et Codecademie tous en réalisant une expérience dans la restauration sur Londres. Maintenant mon bagage technique plus solide, je décide créer ma propre agence (et cette fois non fictive) de création web <a href="https://www.gciweb.agency/"><span>GCI web agency</span></a>. <br> <br>
+                        Mais Chocolate-in agency est un projet beaucoup plus personnel, une sorte de portfolio.
+                    </p>
+                    <h3>Mais pourauoi Chocolate-in Agency ?</h3>
+                    <p>
+                        Alors chocolate-in car je viens du pays de la chocolatine. Mais pourquoi cette orthographe de type anglaise me direz-vous ? Car une vieille légende de chez moi dis, que le magnifique mot de chocolatine viendrait des anglais qui, occupant le sud-ouest de la France fut un temps, désignaient le pain au chocolat, chocolate in bread. Ça m’a toujours fait marrer et je trouve que c’est le bon liant entre d’où je viens et ou je suis.
+                    </p>
+                    <h3>Et pourquoi fictive ?</h3>
+                    <p>
+                        Je souhaitai avoir une plateforme qui regroupe tous ce que je fais sans avoir de lien entre eux mais où je puisse quand même montrer qui je suis, mes compétences et mes projets. 
+                    </p>
+                </article>
+            </article>
+        </section>
 
+        <section id="project">
+            <h2>Mes projets</h2>
+            <article>
+                <div class="projet">
+                    <a href="https://ma-bel.fr/">
+                        <img src="" alt="">
+                    </a>
+                    <h3>Mabel</h3>
+                </div>
+
+                <div class="projet">
+                    <a href="club-page/theodlgamerscrew.html">
+                        <img src="" alt="">
+                    </a>
+                    <h3>The old gamers crew</h3>
+                </div>
+
+                <div class="projet">
+                    <a href="#">
+                        <img src="" alt="">
+                    </a>
+                    <h3>Games</h3>
+                </div>
+
+                <div class="projet">
+                    <a href="#">
+                        <img src="" alt="">
+                    </a>
+                    <h3>Photography</h3>
+                </div>
+            </article>
+        </section>
+        
+    </main>
     <footer>
         <a class="mentionslegales" href="#">mentions legales</a>
     </footer>
