added new content

--- a/index.html
+++ b/index.html
@@ -93,7 +93,68 @@
                 </div>
             </article>
         </section>
-        
+
+        <section id="skill">
+
+            <h2>Compétences active/passive</h2>
+
+            <article>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>HTML 5</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>CSS 3</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>JavaScript</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>GitHub</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>Adobe</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>WordPress</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>PHP</h3>
+                </div>
+
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3>Responsive <br> Design</h3>
+                </div>
+
+            </article>
+        </section>
+        <section id="contact">
+            <img src="" alt="">
+            <address>
+                <h3>Basé sur Londres et Bordeaux</h3>
+                <a href="mailto:gaetan@gciweb.agency">gaetan@gciweb.agency</a>
+                <a href="tel:+33616497422">06-16-49-74-22</a>
+                <a href="https://github.com/Gadmichette">GitHub</a>
+                <div id="social-media">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </address>
+        </section>
     </main>
     <footer>
         <a class="mentionslegales" href="#">mentions legales</a>
