change directory to css files

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="sources/css/reset.css" />
+    <link rel="stylesheet" href="sources/css/fonts.css" />
+    <link rel="stylesheet" href="sources/css/style.css" />
 </head>
 
 <body>
     <header>
-        <img class="logo" src="images/fond_noir.svg" alt="logo_casamento_illionnet_gaetan_webdeveloper" />
+        <img class="logo" src="sources/images/fond_noir.svg" alt="logo_casamento_illionnet_gaetan_webdeveloper" />
 
         <nav class="navigation">
             <ul>
