--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="about">
             <h2>Chocolate-in agency ? Mais qui se cache derrière ?</h2>
             <article>
-                <img src="" alt="Image de présentation de Gaëtan Casmento-Illionnet">
+                <img src="sources/images/portrait.JPG" alt="Image de présentation de Gaëtan Casmento-Illionnet">
                 <article>
                     <p>
                         Un développeur front-end à aspiration full-stack qui s'appelle Gaëtan Casamento-Illionnet. <br>
