--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/10596f0b65.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="sources/css/reset.css" />
     <link rel="stylesheet" href="sources/css/fonts.css" />
     <link rel="stylesheet" href="sources/css/style.css" />
@@ -20,7 +21,7 @@
             <ul>
                 <li><a href="#about">Chocolate-in Agency?</a></li>
                 <li><a href="#project">Projets</a></li>
-                <li><a href="#skill">Compétences</a></li>
+                <li><a href="#skills">Compétences</a></li>
                 <li><a href="#coontact">Contact</a></li>
             </ul>
         </nav>
@@ -49,7 +50,7 @@
                         Originaire de Bordeaux, je vis à Londres depuis 2019. Après 8 ans années dans le secteur de l’aéronautique, je change de vois et pars tenter l’aventure dans le web. D’abord une formation de chef de projet digital passé à digital campus bordeaux en 2019 je décide de me spécialise dans le développement web en suivant des formations en lignes sur Openclassrom et Codecademie tous en réalisant une expérience dans la restauration sur Londres. Maintenant mon bagage technique plus solide, je décide créer ma propre agence (et cette fois non fictive) de création web <a href="https://www.gciweb.agency/"><span>GCI web agency</span></a>. <br> <br>
                         Mais Chocolate-in agency est un projet beaucoup plus personnel, une sorte de portfolio.
                     </p>
-                    <h3>Mais pourauoi Chocolate-in Agency ?</h3>
+                    <h3>Mais pourquoi Chocolate-in Agency ?</h3>
                     <p>
                         Alors chocolate-in car je viens du pays de la chocolatine. Mais pourquoi cette orthographe de type anglaise me direz-vous ? Car une vieille légende de chez moi dis, que le magnifique mot de chocolatine viendrait des anglais qui, occupant le sud-ouest de la France fut un temps, désignaient le pain au chocolat, chocolate in bread. Ça m’a toujours fait marrer et je trouve que c’est le bon liant entre d’où je viens et ou je suis.
                     </p>
@@ -66,77 +67,77 @@
             <article>
                 <div class="projet">
                     <a href="https://ma-bel.fr/">
-                        <img src="" alt="">
+                        <img src="sources/images/ma-bel.png" alt="illustration du projet ma-bel">
+                        <div id="background"></div>
                     </a>
                     <h3>Mabel</h3>
                 </div>
 
                 <div class="projet">
                     <a href="club-page/theodlgamerscrew.html">
-                        <img src="" alt="">
+                        <img src="sources/images/old-crew.png" alt="image de présentation du site old crew gamer">
+                        <div id="background"></div>
                     </a>
                     <h3>The old gamers crew</h3>
                 </div>
 
                 <div class="projet">
                     <a href="#">
-                        <img src="" alt="">
+                        <img src="sources/images/dice.jpg" alt="image de présentation de la section jeux">
+                        <div id="background"></div>
                     </a>
+                    
                     <h3>Games</h3>
                 </div>
 
                 <div class="projet">
                     <a href="#">
-                        <img src="" alt="">
+                        <img src="sources/images/photography.jpg" alt="image de présentation de la section photographie">
+                        <div id="background"></div>
                     </a>
                     <h3>Photography</h3>
                 </div>
             </article>
         </section>
 
-        <section id="skill">
+        <section id="skills">
 
             <h2>Compétences active/passive</h2>
 
             <article>
 
                 <div class="skill">
-                    <img src="" alt="">
+                    <i class="fab fa-html5"></i>
                     <h3>HTML 5</h3>
                 </div>
 
                 <div class="skill">
-                    <img src="" alt="">
+                    <i class="fab fa-css3-alt"></i>
                     <h3>CSS 3</h3>
                 </div>
 
                 <div class="skill">
-                    <img src="" alt="">
+                    <i class="fab fa-js-square"></i>
                     <h3>JavaScript</h3>
                 </div>
 
                 <div class="skill">
-                    <img src="" alt="">
+                    <i class="fab fa-github-square"></i>
                     <h3>GitHub</h3>
                 </div>
 
                 <div class="skill">
-                    <img src="" alt="">
-                    <h3>Adobe</h3>
-                </div>
-
-                <div class="skill">
-                    <img src="" alt="">
+                    <i class="fab fa-wordpress"></i>
                     <h3>WordPress</h3>
                 </div>
 
                 <div class="skill">
-                    <img src="" alt="">
+                    <i class="fab fa-php"></i>
                     <h3>PHP</h3>
                 </div>
 
                 <div class="skill">
-                    <img src="" alt="">
+                    <i class="fas fa-mobile"></i>
                     <h3>Responsive <br> Design</h3>
                 </div>
 
