--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </article>
         </section>
         <section id="contact">
-            <img src="" alt="">
+            <img src="sources/images/contact.jpg" alt="Image de présentation de la prise de contact">
             <address>
                 <h3>Basé sur Londres et Bordeaux</h3>
                 <a href="mailto:gaetan@gciweb.agency">gaetan@gciweb.agency</a>
